integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_wsol.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 1000,
  "cursor": "So11111111111111111111111111111111111111112",
  "items": [
    {
      "interface": "FungibleToken",
      "id": "So11111111111111111111111111111111111111112",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [
          {
            "uri": "https://raw.githubusercontent.com/solana-labs/token-list/main/assets/mainnet/So11111111111111111111111111111111111111112/logo.png",
            "mime": "image/png"
          }
        ],
        "metadata": {
          "name": "Wrapped SOL",
          "symbol": "SOL"
        },
        "links": {
          "image": "https://raw.githubusercontent.com/solana-labs/token-list/main/assets/mainnet/So11111111111111111111111111111111111111112/logo.png"
        }
      },
      "authorities": [
        {
          "address": "AqH29mZfQFgRpfwaPoTMWSKJ5kqauoc1FwVBRksZyQrt",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "GugU1tP7doLeTw9hQP51xRJyS8Da1fWxuiy2rVrnMD2m"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "2nQNF8F9LLWMqdjymiLK2u8HoHMvYa4orCXsp3w65fQ2",
            "balance": 666374265601050
          }
        ],
        "balance": 666374265601050,
        "supply": 0,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "Azb2GJy8RzFuiDuzFKz8dbnReUVcoo9UchNyyDB2wpFT"
      }
    }
  ]
}
